--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.5
+  responsive_grid: ^2.1.0
+  intl_phone_number_input: ^0.7.1
+  animate_do: ^2.1.0
+  image_picker: ^0.8.6
+  flutter_switch: ^0.3.2
+  video_player: ^2.4.7
+  syncfusion_flutter_gauges: ^20.3.52
 
 dev_dependencies:
   flutter_test:
@@ -61,8 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+   - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
